<resources>
    <string name="app_name">MyAppPortfolio</string>

    <string name="action_settings">Settings</string>

    <string name="txt_title">My Nanodegree Apps!</string>

    <string name="btn_popularMovies">Popular Movies</string>
    <string name="btn_footballScores">Football Scores</string>
    <string name="btn_library">Library</string>
    <string name="btn_buildItBigger">Build It Bigger</string>
    <string name="btn_xyzReader">XYZ Reader</string>
    <string name="btn_capstone">Capstone</string>

</resources>
